fixed some styles and finished the main logic behind the mesas view

--- a/views/mesas/mesas.style.css
+++ b/views/mesas/mesas.style.css
@@ -4,7 +4,6 @@ main {
     flex-direction: column;
     align-items: flex-start;
     gap: 18px;
-    align-self: stretch;
 }
 
 .searchContainer {
@@ -19,7 +18,7 @@ main {
     background: #FAFAFA;
 }
 
-.searchContainer>h1 {
+h1 {
     font-size: 36px;
     font-style: normal;
     font-weight: 400;
@@ -27,13 +26,12 @@ main {
 
 .options {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     gap: 20px;
 }
 
 .optionsContainers {
     display: flex;
-    height: 82px;
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
@@ -45,35 +43,28 @@ main {
     font-weight: 400;
 }
 
-.optionsContainers>input {
-    text-align: center;
-    width: 100%;
-    height: 35%;
-}
-
+.optionsContainers>input,
 .optionsContainers>select {
-    text-align: center;
-    width: 100%;
-    height: 40%;
-}
-
-input[type='submit'] {
     display: flex;
     padding: 6px 20px;
     justify-content: center;
     align-items: center;
     gap: 10px;
     border: 1px solid #515050;
-    background: linear-gradient(180deg, #F8F8F8 0%, #D9D9D9 100%);
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    transform: translateY(5px);
+    color: #515050;
+    background: #FFF;
 }
 
-input[type='submit']:hover {
+.options>input[type='submit'] {
+    padding: 6px 20px;
+    border: 1px solid #515050;
+    background: linear-gradient(180deg, #F8F8F8 0%, #D9D9D9 100%);
+    font-size: 15px;
+}
+
+.options>input[type='submit']:hover {
     cursor: pointer;
-    background-color: #ffffff;
+    background: linear-gradient(180deg, #ececec 0%, #B5B5B5 100%);
 }
 
 table {
@@ -110,6 +101,7 @@ tbody>tr>td {
     padding: 4px 0px;
     justify-content: space-between;
     align-self: stretch;
+    font-weight: 300;
 }
 
 
